Release 3.2.0 performance and lifecycle fixes