@@ -5,14 +5,16 @@ import org.bukkit.Bukkit;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.logging.Logger;
 
 public class UpdateChecker {
 
     private final LowCore plugin;
     private final Logger logger;
+    private final AtomicBoolean running = new AtomicBoolean();
 
     private static final String API_URL = "https://api.github.com/repos/jan-kulik/LowCore/releases/latest";
 
@@ -22,13 +24,18 @@ public class UpdateChecker {
     }
 
     public void checkForUpdates() {
+        if (!running.compareAndSet(false, true)) return;
+        String currentVersion = plugin.getPluginMeta().getVersion();
+        boolean notifyConsole = plugin.getConfig().getBoolean("update-checker.notify-console", true);
+        plugin.setUpdateAvailable(false);
+        plugin.setLatestVersion(null);
         Bukkit.getScheduler().runTaskAsynchronously(plugin, () -> {
-            String currentVersion = plugin.getDescription().getVersion();
-
+            HttpURLConnection connection = null;
             try {
-                HttpURLConnection connection = (HttpURLConnection) new URL(API_URL).openConnection();
+                connection = (HttpURLConnection) URI.create(API_URL).toURL().openConnection();
                 connection.setRequestMethod("GET");
                 connection.setRequestProperty("User-Agent", "LowCore-UpdateChecker");
+                connection.setRequestProperty("Accept", "application/vnd.github+json");
                 connection.setConnectTimeout(5000);
                 connection.setReadTimeout(5000);
 
@@ -43,6 +50,9 @@ public class UpdateChecker {
                         new InputStreamReader(connection.getInputStream(), StandardCharsets.UTF_8))) {
                     String line;
                     while ((line = reader.readLine()) != null) {
+                        if (sb.length() + line.length() > 65_536) {
+                            throw new IllegalStateException("GitHub response exceeded 64 KiB");
+                        }
                         sb.append(line);
                     }
                 }
@@ -62,7 +72,7 @@ public class UpdateChecker {
                     plugin.setUpdateAvailable(true);
                     plugin.setLatestVersion(latestVersion);
 
-                    if (plugin.getConfig().getBoolean("update-checker.notify-console", true)) {
+                    if (notifyConsole) {
                         logger.info("============================================");
                         logger.info("A new version of LowCore is available!");
                         logger.info("Current version: " + currentVersion);
@@ -76,10 +86,12 @@ public class UpdateChecker {
 
             } catch (Exception e) {
                 logger.warning("Error while checking for updates: " + e.getMessage());
+            } finally {
+                if (connection != null) connection.disconnect();
+                running.set(false);
             }
         });
     }
-
 
     private String parseTagName(String json) {
         String marker = "\"tag_name\"";
@@ -95,7 +107,6 @@ public class UpdateChecker {
 
         return json.substring(start, end);
     }
-
 
     private boolean isNewerVersion(String latest, String current) {
         String[] latestParts = latest.split("\\.");
